k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample
    role: api
  name: sample-api
spec:
  selector:
    matchLabels:
      app: sample
      role: api
  template:
    metadata:
      labels:
        app: sample
        role: api
    spec:
      containers:
        - env:
          - name: LOG_LEVEL
            value: verbose
          image: joshuatonga/sample-nodejs-api@sha256:4080ce33e7309a1916aaefdc71d843c224983d4bfa6620d0719ced73e22810a3
          imagePullPolicy: Always
          name: application
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 150m
              memory: 150Mi
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 3
