k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample
    role: api
  name: sample-api
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: sample
    role: api
  type: ClusterIP
